--- a/Vue-CLI/vue-element/package.json
+++ b/Vue-CLI/vue-element/package.json
@@ -16,6 +16,7 @@
     "vue-router": "^3.0.2"
   },
   "devDependencies": {
+    "@types/better-scroll": "^1.12.1",
     "@vue/cli-plugin-babel": "^3.4.0",
     "@vue/cli-plugin-eslint": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
